--- a/Northwind.Application/Views/Shared/_DetailsPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_DetailsPartial.cshtml
@@ -61,7 +61,10 @@
                 @if (value != null && value.GetType().FullName.Contains(ControllerName))
                 {
                     var id = value.GetType().GetProperty(IdName).GetValue(value);
-                    <a href=@Url.ActionLink("Details", ControllerName, new { id = id }) class="fw-bold">Show @value.GetType().Name.SplitForUpperCase()</a>
+
+                    <a href=@Url.ActionLink("Details", ControllerName, new { id = id }) class="fw-bold">
+                        @(string.Join("", value.GetType().GetProperties().Where(x => x.Name.Contains("Name") && x.PropertyType.FullName.Contains("String")).Select(x => x.GetValue(value) as string)).SplitForUpperCase())
+                    </a>
                 }
 
                 @if (value is IEnumerable<object>)
