Added Customer Id to AspNetUser and refactored Register logics

--- a/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
@@ -75,7 +75,7 @@
                         </select>
                     }
 
-                    @if (type.Contains("Int") && !item.Name.Contains("Id"))
+                    @if (type.Contains("Int") && !item.Name.Contains("Id") && !SelectLists.Any(x => x.Name.Contains(item.Name)))
                     {
                         <input type="number" name="@item.Name" class="form-control" />
                     }
