--- a/Northwind.Application/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Northwind.Application/Areas/Identity/Pages/Account/Register.cshtml
@@ -25,6 +25,23 @@
             <label asp-for="Input.ConfirmPassword">Confirm Password</label>
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
         </div>
+        <div class="form-control mb-3">
+            <label class="fw-bold">Customer</label>
+            <select class="form-select" asp-for="Input.CustomerId">
+                @foreach (var option in Model.Input.CustomerList)
+                {
+                    if (option.Selected)
+                    {
+                        <option value="@option.Value" selected>@option.Text</option>
+                    }
+                    else
+                    {
+                        <option value="@option.Value">@option.Text</option>
+                    }
+                }
+            </select>
+            <span asp-validation-for="Input.CustomerId" class="text-danger"></span>
+        </div>
         <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
     </form>
 </div>
