--- a/Northwind.Application/Views/Roles/UserList.cshtml
+++ b/Northwind.Application/Views/Roles/UserList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+﻿@model IEnumerable<Northwind.Data.Entities.NorthwindUser>
 
 <h2>User List</h2>
 <table class="table">
