--- a/Northwind.Application/Views/Shared/_LoginPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Northwind.Data.Entities
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<NorthwindUser> SignInManager
+@inject UserManager<NorthwindUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
