Created TagHelper and ViewModel for pagination

--- a/Northwind.Application/Views/Product/Delete.cshtml
+++ b/Northwind.Application/Views/Product/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Northwind.Application.Models.Product.ProductIndexModel>
+﻿@model IEnumerable<Northwind.Application.Models.Product.ProductDeleteModel>
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Product";
