--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Northwind.Application.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/checkboxes.css" type="text/css" />
