--- a/Northwind.Application/Views/Shared/_DetailsPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_DetailsPartial.cshtml
@@ -12,7 +12,7 @@
     string ControllerName => ViewData["ControllerName"].ToString().SplitForUpperCase(Model);
     PropertyInfo[] Properties => Model.GetType().GetProperties();
     string IdName => Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).Name;
-    int IdValue => (int)(Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).GetValue(Model) ?? 0);
+    object? IdValue => Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).GetValue(Model);
     string Disabled => User.IsInRole("admin") ? "" : "disabled";
 }
 
