--- a/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
@@ -42,21 +42,11 @@
             @foreach (var item in Properties.Where(x => !(x.GetValue(Model) is byte[])))
             {
                 var type = item.PropertyType.FullName;
-                var hidden = type.Contains("FormFile") || type.Contains("Byte") || SelectLists.Any(x => x.Name != item.Name && x.Name.Contains(item.Name)) || item.Name.Contains("Id") ? "hidden" : "";
+                var hidden = type.Contains("FormFile") || type.Contains("Byte") || SelectLists.Any(x => x.Name != item.Name && x.Name.Contains(item.Name)) || (item.Name.Contains("Id") && !item.Name.Contains("List")) ? "hidden" : "";
 
                 <div class="form-group">
                     <label class="control-label" @hidden>@item.Name.Replace("List", "").Replace("Id", "").SplitForUpperCase()</label>
                     @await Html.PartialAsync("_ValidationSpanPartial", Model, SetPropertyName(item.Name) as ViewDataDictionary)
-
-                    @if (type.Contains("DateTime"))
-                    {
-                        <input name="@item.Name" type="date" class="form-control" />
-                    }
-
-                    @if (type.Contains("String"))
-                    {
-                        <input name="@item.Name" class="form-control" @(item.Name.Contains("Id") ? "hidden" : "") />
-                    }
 
                     @if (type.Contains("SelectList"))
                     {
@@ -74,25 +64,33 @@
                             }
                         </select>
                     }
-
-                    @if (type.Contains("Int") && !item.Name.Contains("Id") && !SelectLists.Any(x => x.Name.Contains(item.Name)))
+                    else
                     {
-                        <input type="number" name="@item.Name" class="form-control" />
-                    }
-
-                    @if (type.Contains("Decimal"))
-                    {
-                        <input type="text" name="@item.Name" class="form-control" />
-                    }
-
-                    @if (type.Contains("Bool"))
-                    {
-                        <input class="form-check-input" type="checkbox" name="@item.Name" />
-                    }
-
-                    @if (type.Contains("FormFile"))
-                    {
-                        <input id="fileInput" name="@item.Name" type="file" class="form-control" accept="image/gif,image/bmp,image/jpeg,image/jpg,image/png" onchange="previewFile(this)" style="display:none" />
+                        if (type.Contains("Bool"))
+                        {
+                            <input class="form-check-input" type="checkbox" name="@item.Name" />
+                        }
+                        else
+                        {
+                            if (type.Contains("FormFile"))
+                            {
+                                <input id="fileInput" name="@item.Name" type="file" class="form-control" accept="image/gif,image/bmp,image/jpeg,image/jpg,image/png" onchange="previewFile(this)" style="display:none" />
+                            }
+                            else
+                            {
+                                if (type.Contains("DateTime"))
+                                {
+                                    <input class="form-control" type="date" name="@item.Name" />
+                                }
+                                else
+                                {
+                                    if (!SelectLists.Any(x => x.Name.Contains(item.Name)))
+                                    {
+                                        <input class="form-control" name="@item.Name" @hidden />
+                                    }
+                                }
+                            }
+                        }
                     }
                 </div>
             }
